feat: update user balance
