# dto/userDto.go
@@ -15,6 +15,7 @@ type ResUserDto struct {
 	ID       string    `json:"id"`
 	Username string `json:"username"`
 	Email    string `json:"email"`
+	Balance  int64 `json:"balance"`
 	CreatedAt string `json:"created_at"`
 	UpdatedAt *string `json:"updated_at"`
 	CreatedBy string `json:"created_by"`
@@ -34,4 +35,8 @@ type ReqUpdateUserDto struct {
 type ReqUpdateUserPasswordDto struct {
 	OldPassword string `json:"old_password" binding:"required"`
 	NewPassword string `json:"new_password" binding:"required"`
+}
+
+type ReqUpdateUserBalanceDto struct {
+	Balance int64 `json:"balance" binding:"required"`
 }
